button hover close to finished, need to fix overflow from shadow

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@
 body{
   background-color: black;
   height: 100%;
-  /* display: flex;
+  display: flex;
   align-content: center;
-  justify-content: center; */
+  justify-content: center;
 }
 
 .container{
