--- a/css/svg.css
+++ b/css/svg.css
@@ -20,7 +20,7 @@
   0 0 5px var(--neon-pink-glow),
   0 0 7px var(--neon-pink-glow),
   0 0 15px var(--neon-pink-glow);
-  fill: var(--neon-pink-text);
+  fill: rgba(252, 160, 246, 0.8)
 }
 
 *{
@@ -52,12 +52,13 @@ body {
 .button{
   width: 90px;
   height:120px; 
+  
 }
 
 .button_container:hover{
   color: var(--neon-pink-text);
   fill: var(--neon-pink-text);
-  filter: brightness(2)
+  filter: brightness(1.3);
 }
 
 .button_container:active{
